alt de index listos y se quitan algunos lorem

--- a/pages/luces.html
+++ b/pages/luces.html
@@ -49,7 +49,7 @@
 		</section>
 
 		<section class="recuadroProducto">
-			<div class="tituloProducto">Título Producto</div>
+			<div class="tituloProducto">KIT Ultra Light</div>
 			<div class="grid">
 				<div class="imagenProducto">
 					<img src="../assets/imagenes/neon-22534.jpg" alt="Imagen del Producto">
@@ -76,18 +76,55 @@
 		</section>
 
 		<section class="recuadroProducto">
-			<div class="tituloProducto">Título Producto</div>
+			<div class="tituloProducto">KIT Básico</div>
 			<div class="grid">
 				<div class="imagenProducto">
 					<img src="../assets/imagenes/neon-22534.jpg" alt="Imagen del Producto">
 				</div>
 				<div class="descripcionProducto">
-					<p>Si el presupuesto es ajustado o si el espacio es reducido, te recomendamos este KIT que trae lo justo y necesario, pero que aún así te dejará gratamente sorprendido.</p>
+					<p>Tira la casa por la ventana con este KIT; es ideal para un espacio de unos 30 metros cuadrados.</p>
 					<p>Incluye:</p>
 					<ul>
-						<li>- 2 Cabezales Móviles</li>
-						<li>- 2 Luces de Colores</li>
+						<li>- Luces Láser</li>
+						<li>- Luz Derby</li>
+						<li>- Corta Imagen</li>
+						<li>- Luces Fluor</li>
+						<li>- Luces de Colores</li>
 						<li>- Máquina de Humo</li>
+						<li>- Atril (Trípode)</li>
+						<li>- Entrega y Retiro en San Antonio</li>
+					</ul>
+				</div>
+				<div class="precioProducto">
+					<div>
+						<p>Precio Oferta: <span>$29.990.-</span></p>
+					</div>
+					<div class="botonProducto">
+						<button type="button" class="btn btn-dark boton1">Reservar</button>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section class="recuadroProducto">
+			<div class="tituloProducto">KIT Intermedio</div>
+			<div class="grid">
+				<div class="imagenProducto">
+					<img src="../assets/imagenes/neon-22534.jpg" alt="Imagen del Producto">
+				</div>
+				<div class="descripcionProducto">
+					<p>Si toca cambio de folio o fiesta de graduación, entonces éste es el KIT que necesitas! Funcionará perfecto en un espacio de hasta 80 m2.</p>
+					<p>Incluye:</p>
+					<ul>
+						<li>- Luces Láser</li>
+						<li>- Luz Derby</li>
+						<li>- Corta Imagen</li>
+						<li>- Luces Fluor</li>
+						<li>- Luces de Colores</li>
+						<li>- Máquina de Humo</li>
+						<li>- Atril (Trípode)</li>
+						<li>- 2 Cabezales Móviles</li>
+						<li>- Máquina Burbujas</li>
 						<li>- Entrega y Retiro en San Antonio</li>
 					</ul>
 				</div>
@@ -103,18 +140,25 @@
 		</section>
 
 		<section class="recuadroProducto">
-			<div class="tituloProducto">Título Producto</div>
+			<div class="tituloProducto">KIT Avanzado</div>
 			<div class="grid">
 				<div class="imagenProducto">
 					<img src="../assets/imagenes/neon-22534.jpg" alt="Imagen del Producto">
 				</div>
 				<div class="descripcionProducto">
-					<p>Si el presupuesto es ajustado o si el espacio es reducido, te recomendamos este KIT que trae lo justo y necesario, pero que aún así te dejará gratamente sorprendido.</p>
+					<p>Si la celebración incluye cena y torta de 3 pisos, entonces debes incluir este KIT de luces avanzado. </p>
 					<p>Incluye:</p>
 					<ul>
-						<li>- 2 Cabezales Móviles</li>
-						<li>- 2 Luces de Colores</li>
-						<li>- Máquina de Humo</li>
+						<li>- Bola de Disco</li>
+						<li>- Luces Láser</li>
+						<li>- Luz Derby</li>
+						<li>- Corta Imagen</li>
+						<li>- Luces Fluor</li>
+						<li>- Luces de Colores</li>
+						<li>- 2 Máquinas de Humos</li>
+						<li>- 2 Atriles (Trípode)</li>
+						<li>- 4 Cabezales Móviles</li>
+						<li>- 2 Máquinas Burbujas</li>
 						<li>- Entrega y Retiro en San Antonio</li>
 					</ul>
 				</div>
