--- a/index.html
+++ b/index.html
@@ -48,21 +48,21 @@
 				</div>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img src="./assets/imagenes/anonuevo.jpg" class="d-block w-100" alt="...">
+						<img src="./assets/imagenes/anonuevo.jpg" class="d-block w-100" alt="fiesta año nuevo">
 						<div class="carousel-caption d-none d-md-block">
 							<h5>First slide label</h5>
 							<p>Some representative placeholder content for the first slide.</p>
 						</div>
 					</div>
 					<div class="carousel-item">
-						<img src="./assets/imagenes/celebra15.jpg" class="d-block w-100 encuadreCelebracion15" alt="...">
+						<img src="./assets/imagenes/celebra15.jpg" class="d-block w-100 encuadreCelebracion15" alt="fiesta cumpleaños 15">
 						<div class="carousel-caption d-none d-md-block">
 							<h5>Second slide label</h5>
 							<p>Some representative placeholder content for the second slide.</p>
 						</div>
 					</div>
 					<div class="carousel-item">
-						<img src="./assets/imagenes/ninaneon.jpg" class="d-block w-100" alt="...">
+						<img src="./assets/imagenes/ninaneon.jpg" class="d-block w-100" alt="fiesta neón">
 						<div class="carousel-caption d-none d-md-block">
 							<h5>Third slide label</h5>
 							<p>Some representative placeholder content for the third slide.</p>
@@ -86,7 +86,7 @@
 			</div>
 			<div class="promoProductosCards">
 				<div class="card">
-					<img src="./assets/imagenes/luces.jpg" class="card-img-top" alt="...">
+					<img src="./assets/imagenes/luces.jpg" class="card-img-top" alt="luces para fiesta">
 					<div class="card-body">
 						<p class="card-text">Crea un ambiente mágico!</p>
 						<a href="#" class="btn btn-primary">Iluminación</a>
@@ -94,23 +94,23 @@
 				</div>
 
 				<div class="card">
-					<img src="./assets/imagenes/amplificacion.jpg" class="card-img-top" alt="...">
+					<img src="./assets/imagenes/amplificacion.jpg" class="card-img-top" alt="amplificación para eventos">
 					<div class="card-body">
 						<p class="card-text">Amplifica tu evento!</p>
 						<a href="#" class="btn btn-primary">Amplificación</a>
 					</div>
 				</div>
 				<div class="card">
-					<img src="./assets/imagenes/proyector.jpeg" class="card-img-top" alt="...">
+					<img src="./assets/imagenes/proyector.jpeg" class="card-img-top" alt="proyector de video">
 					<div class="card-body">
-						<p class="card-text">Proyecta de todo y celebra en grande!</p>
+						<p class="card-text">Proyecta de todo!</p>
 						<a href="#" class="btn btn-primary">Proyección</a>
 					</div>
 				</div>
                 <div class="card">
-					<img src="./assets/imagenes/cabina.jpg" class="card-img-top" alt="...">
+					<img src="./assets/imagenes/cabina.jpg" class="card-img-top" alt="fotos entretenidas">
 					<div class="card-body">
-						<p class="card-text">Entretenidas fotos instantáneas!</p>
+						<p class="card-text">Fotos entretenidas!</p>
 						<a href="#" class="btn btn-primary">Cabina de Fotos</a>
 					</div>
 				</div>
