completados todos los alt y añadidas algunas imágenes nuevas

--- a/pages/audio.html
+++ b/pages/audio.html
@@ -52,7 +52,7 @@
 			<div class="tituloProducto">KIT Básico</div>
 			<div class="grid">
 				<div class="imagenProducto">
-					<img src="../assets/imagenes/neon-22534.jpg" alt="Imagen del Producto">
+					<img src="../assets/imagenes/amplificacion.jpg" alt="Imagen de parlante lg">
 				</div>
 				<div class="descripcionProducto">
 					<p>No subestimes a éste parlante, es capaz de prender el carrete a medio volumen, además tiene un bonito diseño, especial para espacios pequeños como una sala de clases. Incluye 1 micrófono inalámbrico. Es marca LG y tiene una potencia de 200 RMS.</p>
@@ -78,7 +78,7 @@
 			<div class="tituloProducto">KIT Intermedio</div>
 			<div class="grid">
 				<div class="imagenProducto">
-					<img src="../assets/imagenes/neon-22534.jpg" alt="Imagen del Producto">
+					<img src="../assets/imagenes/neon-22534.jpg" alt="Imagen de kit intermedio de audio">
 				</div>
 				<div class="descripcionProducto">
 					<p>Con este KIT llegan los de seguridad ciudadana, quedas advertido. Los amplificadores son marca XXXXXXX de 300 RMS cada uno.</p>
@@ -106,7 +106,7 @@
 			<div class="tituloProducto">KIT Avanzado</div>
 			<div class="grid">
 				<div class="imagenProducto">
-					<img src="../assets/imagenes/neon-22534.jpg" alt="Imagen del Producto">
+					<img src="../assets/imagenes/neon-22534.jpg" alt="Imagen de kit avanzado de audio">
 				</div>
 				<div class="descripcionProducto">
 					<p>Si buscas un sonido de alta fidelidad, reserva este KIT; tendrás que echar a tus invitados porque nadie querrá irse. La amplificación es marca XXXXXX de 400 RMS cada parlante.</p>
@@ -134,7 +134,7 @@
 			<div class="tituloProducto">SERVICIO DE DJ + AUDIO PRO</div>
 			<div class="grid">
 				<div class="imagenProducto">
-					<img src="../assets/imagenes/neon-22534.jpg" alt="Imagen del Producto">
+					<img src="../assets/imagenes/dj.jpg" alt="Imagen de dj">
 				</div>
 				<div class="descripcionProducto">
 					<p>Si la cosa va en serio, entonces necesitas un DJ y un audio capaz de dejar a tus invitados peinados para atrás! La amplificación es marca XXXXXX de 400 RMS cada parlante.</p>
