--- a/pages/extras.html
+++ b/pages/extras.html
@@ -41,86 +41,32 @@
 	<main class="mainProductos">
 		<section>
 			<div>
-				<h3 class="tituloCategoria">NUESTRA ILUMINACIÓN</h3>
+				<h3 class="tituloCategoria">MAGIA PARA TU EVENTO</h3>
 			</div>
 			<div>
-				<P class="descripcionCategoria"> En MegaFest tenemos las luces perfectas para tu celebración, con precios <span>rebaratos</span> y con entrega y retiro incluidos dentro de San Antonio.</P>
+				<P class="descripcionCategoria"> Convierte un evento común, en uno inolvidable! Añade magia a tu evento.</P>
 			</div>
 		</section>
 
 		<section class="recuadroProducto">
-			<div class="tituloProducto">Título Producto</div>
+			<div class="tituloProducto">Chispas Frías</div>
 			<div class="grid">
 				<div class="imagenProducto">
-					<img src="../assets/imagenes/neon-22534.jpg" alt="Imagen del Producto">
+					<img src="../assets/imagenes/neon-22534.jpg" alt="Imagen de máquinas de chispas frías">
 				</div>
 				<div class="descripcionProducto">
-					<p>Si el presupuesto es ajustado o si el espacio es reducido, te recomendamos este KIT que trae lo justo y necesario, pero que aún así te dejará gratamente sorprendido.</p>
+					<p>Las mejores fotos son con efectos de chispas frías, tus invitados quedarán boquiabiertos</p>
 					<p>Incluye:</p>
 					<ul>
-						<li>- 2 Cabezales Móviles</li>
-						<li>- 2 Luces de Colores</li>
-						<li>- Máquina de Humo</li>
+						<li>- 2 Máquinas de Chispas Frías</li>
+						<li>- Arriendo de 5 horas</li>
+						<li>- Capacitación de uso</li>
 						<li>- Entrega y Retiro en San Antonio</li>
 					</ul>
 				</div>
 				<div class="precioProducto">
 					<div>
-						<p>Precio Oferta: <span>$23.990.-</span></p>
-					</div>
-					<div class="botonProducto">
-						<button type="button" class="btn btn-dark boton1">Reservar</button>
-					</div>
-				</div>
-			</div>
-		</section>
-
-		<section class="recuadroProducto">
-			<div class="tituloProducto">Título Producto</div>
-			<div class="grid">
-				<div class="imagenProducto">
-					<img src="../assets/imagenes/neon-22534.jpg" alt="Imagen del Producto">
-				</div>
-				<div class="descripcionProducto">
-					<p>Si el presupuesto es ajustado o si el espacio es reducido, te recomendamos este KIT que trae lo justo y necesario, pero que aún así te dejará gratamente sorprendido.</p>
-					<p>Incluye:</p>
-					<ul>
-						<li>- 2 Cabezales Móviles</li>
-						<li>- 2 Luces de Colores</li>
-						<li>- Máquina de Humo</li>
-						<li>- Entrega y Retiro en San Antonio</li>
-					</ul>
-				</div>
-				<div class="precioProducto">
-					<div>
-						<p>Precio Oferta: <span>$23.990.-</span></p>
-					</div>
-					<div class="botonProducto">
-						<button type="button" class="btn btn-dark boton1">Reservar</button>
-					</div>
-				</div>
-			</div>
-		</section>
-
-		<section class="recuadroProducto">
-			<div class="tituloProducto">Título Producto</div>
-			<div class="grid">
-				<div class="imagenProducto">
-					<img src="../assets/imagenes/neon-22534.jpg" alt="Imagen del Producto">
-				</div>
-				<div class="descripcionProducto">
-					<p>Si el presupuesto es ajustado o si el espacio es reducido, te recomendamos este KIT que trae lo justo y necesario, pero que aún así te dejará gratamente sorprendido.</p>
-					<p>Incluye:</p>
-					<ul>
-						<li>- 2 Cabezales Móviles</li>
-						<li>- 2 Luces de Colores</li>
-						<li>- Máquina de Humo</li>
-						<li>- Entrega y Retiro en San Antonio</li>
-					</ul>
-				</div>
-				<div class="precioProducto">
-					<div>
-						<p>Precio Oferta: <span>$23.990.-</span></p>
+						<p>Precio Oferta: <span>$99.990.-</span></p>
 					</div>
 					<div class="botonProducto">
 						<button type="button" class="btn btn-dark boton1">Reservar</button>
