--- a/pages/fotovideo.html
+++ b/pages/fotovideo.html
@@ -41,32 +41,32 @@
 	<main class="mainProductos">
 		<section>
 			<div>
-				<h3 class="tituloCategoria">NUESTRA ILUMINACIÓN</h3>
+				<h3 class="tituloCategoria">INMORTALIZA TU FIESTA</h3>
 			</div>
 			<div>
-				<P class="descripcionCategoria"> En MegaFest tenemos las luces perfectas para tu celebración, con precios <span>rebaratos</span> y con entrega y retiro incluidos dentro de San Antonio.</P>
+				<P class="descripcionCategoria"> Que los recuerdos de tu gran celebración queden para siempre, adquiere fotos y videos entretenidos para ti y para tus invitados. También contamos con proyector de video.</P>
 			</div>
 		</section>
 
 		<section class="recuadroProducto">
-			<div class="tituloProducto">Título Producto</div>
+			<div class="tituloProducto">PROYECTOR + TELÓN</div>
 			<div class="grid">
 				<div class="imagenProducto">
-					<img src="../assets/imagenes/neon-22534.jpg" alt="Imagen del Producto">
+					<img src="../assets/imagenes/neon-22534.jpg" alt="Imagen de proyector de video matrimonio">
 				</div>
 				<div class="descripcionProducto">
-					<p>Si el presupuesto es ajustado o si el espacio es reducido, te recomendamos este KIT que trae lo justo y necesario, pero que aún así te dejará gratamente sorprendido.</p>
+					<p>Que el karaoke, que las fotitos del recuerdo, que el video de reggaetón, que el partido de fútbol... Proyéctalo! que tu evento sea inolvidable!</p>
 					<p>Incluye:</p>
 					<ul>
-						<li>- 2 Cabezales Móviles</li>
-						<li>- 2 Luces de Colores</li>
-						<li>- Máquina de Humo</li>
+						<li>- Proyector Full HD</li>
+						<li>- Telón con Trípode</li>
+						<li>- Instalación</li>
 						<li>- Entrega y Retiro en San Antonio</li>
 					</ul>
 				</div>
 				<div class="precioProducto">
 					<div>
-						<p>Precio Oferta: <span>$23.990.-</span></p>
+						<p>Precio Oferta: <span>$39.990.-</span></p>
 					</div>
 					<div class="botonProducto">
 						<button type="button" class="btn btn-dark boton1">Reservar</button>
@@ -76,24 +76,25 @@
 		</section>
 
 		<section class="recuadroProducto">
-			<div class="tituloProducto">Título Producto</div>
+			<div class="tituloProducto">PLATAFORMA 360°</div>
 			<div class="grid">
 				<div class="imagenProducto">
-					<img src="../assets/imagenes/neon-22534.jpg" alt="Imagen del Producto">
+					<img src="../assets/imagenes/neon-22534.jpg" alt="Imagen de plataforma 360">
 				</div>
 				<div class="descripcionProducto">
-					<p>Si el presupuesto es ajustado o si el espacio es reducido, te recomendamos este KIT que trae lo justo y necesario, pero que aún así te dejará gratamente sorprendido.</p>
+					<p>Siéntete como una celebridad con nuestra plataforma 360°</p>
 					<p>Incluye:</p>
 					<ul>
-						<li>- 2 Cabezales Móviles</li>
-						<li>- 2 Luces de Colores</li>
-						<li>- Máquina de Humo</li>
+						<li>- Plataforma 360°</li>
+						<li>- Alfombra Roja</li>
+						<li>- Cordón Separa Filas</li>
+						<li>- Barras de Iluminación</li>
 						<li>- Entrega y Retiro en San Antonio</li>
 					</ul>
 				</div>
 				<div class="precioProducto">
 					<div>
-						<p>Precio Oferta: <span>$23.990.-</span></p>
+						<p>Precio Oferta: <span>$99.990.-</span></p>
 					</div>
 					<div class="botonProducto">
 						<button type="button" class="btn btn-dark boton1">Reservar</button>
@@ -103,24 +104,24 @@
 		</section>
 
 		<section class="recuadroProducto">
-			<div class="tituloProducto">Título Producto</div>
+			<div class="tituloProducto">Cabina de Fotos</div>
 			<div class="grid">
 				<div class="imagenProducto">
-					<img src="../assets/imagenes/neon-22534.jpg" alt="Imagen del Producto">
+					<img src="../assets/imagenes/cabina.jpg" alt="Imagen de cabina de fotos">
 				</div>
 				<div class="descripcionProducto">
-					<p>Si el presupuesto es ajustado o si el espacio es reducido, te recomendamos este KIT que trae lo justo y necesario, pero que aún así te dejará gratamente sorprendido.</p>
+					<p>Fotos instantáneas con sombreros entretenidos. Tus invitados podrán llevarse fotos impresas y digitales</p>
 					<p>Incluye:</p>
 					<ul>
-						<li>- 2 Cabezales Móviles</li>
-						<li>- 2 Luces de Colores</li>
-						<li>- Máquina de Humo</li>
+						<li>- 1 hora de fotos impresas ilimitadas</li>
+						<li>- 1 ScrapBook (libro de recuerdo con fotos)</li>
+						<li>- Sombreros y cotillón divertido</li>
 						<li>- Entrega y Retiro en San Antonio</li>
 					</ul>
 				</div>
 				<div class="precioProducto">
 					<div>
-						<p>Precio Oferta: <span>$23.990.-</span></p>
+						<p>Precio Oferta: <span>$99.990.-</span></p>
 					</div>
 					<div class="botonProducto">
 						<button type="button" class="btn btn-dark boton1">Reservar</button>
@@ -128,6 +129,7 @@
 				</div>
 			</div>
 		</section>
+		
 
 		<section class="banner">
 			<h3 class="primerTextoBanner">OBTÉN UN 20% DE DESCUENTO</h3>
