se agregan algunas comentarios al código y se corrige el centraje de las fotos en productos

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 					<img src="./assets/imagenes/luces.jpg" class="card-img-top" alt="luces para fiesta">
 					<div class="card-body">
 						<p class="card-text">Crea un ambiente mágico!</p>
-						<a href="#" class="btn btn-primary">Iluminación</a>
+						<a href="./pages/luces.html" class="btn btn-primary">Iluminación</a>
 					</div>
 				</div>
 
@@ -97,21 +97,21 @@
 					<img src="./assets/imagenes/amplificacion.jpg" class="card-img-top" alt="amplificación para eventos">
 					<div class="card-body">
 						<p class="card-text">Amplifica tu evento!</p>
-						<a href="#" class="btn btn-primary">Amplificación</a>
+						<a href="./pages/audio.html" class="btn btn-primary">Amplificación</a>
 					</div>
 				</div>
 				<div class="card">
 					<img src="./assets/imagenes/proyector.jpeg" class="card-img-top" alt="proyector de video">
 					<div class="card-body">
 						<p class="card-text">Proyecta de todo!</p>
-						<a href="#" class="btn btn-primary">Proyección</a>
+						<a href="./pages/fotovideo.html" class="btn btn-primary">Proyección</a>
 					</div>
 				</div>
                 <div class="card">
 					<img src="./assets/imagenes/cabina.jpg" class="card-img-top" alt="fotos entretenidas">
 					<div class="card-body">
 						<p class="card-text">Fotos entretenidas!</p>
-						<a href="#" class="btn btn-primary">Cabina de Fotos</a>
+						<a href="./pages/fotovideo.html" class="btn btn-primary">Cabina de Fotos</a>
 					</div>
 				</div>
 			</div>
@@ -127,14 +127,14 @@
                     <h2>Fiestas de Graduación</h2>
                 </div>
                 <div class="imagenKit">
-                    <img src="./assets/imagenes/graduacion2.jpg" alt=""class="superpuesta1">
-                    <img src="./assets/imagenes/ninaneon.jpg" alt="" class="superpuesta2">
+                    <img src="./assets/imagenes/graduacion2.jpg" alt="imagen de fiesta de graduacion"class="superpuesta1">
+                    <img src="./assets/imagenes/ninaneon.jpg" alt="imagen de graduación" class="superpuesta2">
                 </div>
                 <div class="descripcionKit">
                     <p>Una celebración que recordarás toda la vida!!! <br>Dale magia con una máquina de humo profesional, luces de colores y un sonido que hará bailar hasta al profe!</p>
                 </div>
                 <div class="botonKit">
-                    <a href="#" class="btn btn-primary">Ver KIT Recomendado</a>
+                    <a href="./pages/fotovideo.html" class="btn btn-primary">Ver KIT Recomendado</a>
                 </div>
             </div>
             <hr>
@@ -143,14 +143,14 @@
                     <h2>Cumpleaños</h2>
                 </div>
                 <div class="imagenKit">
-                    <img src="./assets/imagenes/graduacion2.jpg" alt=""class="superpuesta3">
-                    <img src="./assets/imagenes/ninaneon.jpg" alt="" class="superpuesta4">
+                    <img src="./assets/imagenes/graduacion2.jpg" alt="imagen fiesta cumpleaños"class="superpuesta3">
+                    <img src="./assets/imagenes/ninaneon.jpg" alt="fiesta cumpleaños" class="superpuesta4">
                 </div>
                 <div class="descripcionKit">
                     <p>Una celebración que recordarás toda la vida!!! <br>Dale magia con una máquina de humo profesional, luces de colores y un sonido que hará bailar hasta al profe!</p>
                 </div>
                 <div class="botonKit">
-                    <a href="#" class="btn btn-primary">Ver KIT Recomendado</a>
+                    <a href="./pages/luces.html" class="btn btn-primary">Ver KIT Recomendado</a>
                 </div>
             </div>
 		</section>
@@ -214,23 +214,23 @@
 
 		<!-- Aquí va el link a whatsapp con posición fixed a la esquina inferior derecha -->
 		<section>
-			<a href="https://wa.me/56956000200" target="_blank"><img src="./assets/imagenes/whatsapp.png" alt="" class="whatsapp"></a>
+			<a href="https://wa.me/56956000200" target="_blank"><img src="./assets/imagenes/whatsapp.png" alt="logo de whatsapp" class="whatsapp"></a>
 		</section>
 
     </main>
 
     <footer>
         <div>
-			<img src="./assets/imagenes/MFLOGO.png" alt="" class="logoFooter">
+			<img src="./assets/imagenes/MFLOGO.png" alt="logo de megafest" class="logoFooter">
 		</div>
 		<div>
-			<img src="./assets/imagenes/llamar.png" alt="" class="logoLlamar">
+			<img src="./assets/imagenes/llamar.png" alt="icono llamar a megafest" class="logoLlamar">
 		</div>
 		<div>
 			<a href="tel:+56956000200" class="telefono">Contacto: <br>+569 5600 0200</a>
 		</div>
 		<div>
-			<img src="./assets/imagenes/enviar.png" alt="" class="logoCorreo">
+			<img src="./assets/imagenes/enviar.png" alt="icono enviar correo a megafest" class="logoCorreo">
 		</div>
 		<div>
 			<a href="mailto:megafest@gmail.com" class="correo">Correo: <br>megafest@gmail.com</a>
