--- a/pages/audio.html
+++ b/pages/audio.html
@@ -52,7 +52,7 @@
 			<div class="tituloProducto">KIT Básico</div>
 			<div class="grid">
 				<div class="imagenProducto">
-					<img src="../assets/imagenes/amplificacion.jpg" alt="Imagen de parlante lg">
+					<img src="../assets/imagenes/mx t50.jpeg" alt="Imagen de parlante lg">
 				</div>
 				<div class="descripcionProducto">
 					<p>No subestimes a éste parlante, es capaz de prender el carrete a medio volumen, además tiene un bonito diseño, especial para espacios pequeños como una sala de clases. Incluye 1 micrófono inalámbrico. Es marca LG y tiene una potencia de 200 RMS.</p>
