--- a/pages/luces.html
+++ b/pages/luces.html
@@ -52,7 +52,7 @@
 			<div class="tituloProducto">KIT Ultra Light</div>
 			<div class="grid">
 				<div class="imagenProducto">
-					<img src="../assets/imagenes/neon-22534.jpg" alt="Imagen del Producto">
+					<img src="../assets/imagenes/neon-22534.jpg" alt="Imagen de kit de luces de fiesta">
 				</div>
 				<div class="descripcionProducto">
 					<p>Si el presupuesto es ajustado o si el espacio es reducido, te recomendamos este KIT que trae lo justo y necesario, pero que aún así te dejará gratamente sorprendido.</p>
@@ -79,7 +79,7 @@
 			<div class="tituloProducto">KIT Básico</div>
 			<div class="grid">
 				<div class="imagenProducto">
-					<img src="../assets/imagenes/neon-22534.jpg" alt="Imagen del Producto">
+					<img src="../assets/imagenes/neon-22534.jpg" alt="Imagen de kit básico de luces">
 				</div>
 				<div class="descripcionProducto">
 					<p>Tira la casa por la ventana con este KIT; es ideal para un espacio de unos 30 metros cuadrados.</p>
@@ -110,7 +110,7 @@
 			<div class="tituloProducto">KIT Intermedio</div>
 			<div class="grid">
 				<div class="imagenProducto">
-					<img src="../assets/imagenes/neon-22534.jpg" alt="Imagen del Producto">
+					<img src="../assets/imagenes/neon-22534.jpg" alt="Imagen de kit intermedio de luces de fiesta">
 				</div>
 				<div class="descripcionProducto">
 					<p>Si toca cambio de folio o fiesta de graduación, entonces éste es el KIT que necesitas! Funcionará perfecto en un espacio de hasta 80 m2.</p>
@@ -143,7 +143,7 @@
 			<div class="tituloProducto">KIT Avanzado</div>
 			<div class="grid">
 				<div class="imagenProducto">
-					<img src="../assets/imagenes/neon-22534.jpg" alt="Imagen del Producto">
+					<img src="../assets/imagenes/neon-22534.jpg" alt="Imagen de kit avanzado de luces de fiesta">
 				</div>
 				<div class="descripcionProducto">
 					<p>Si la celebración incluye cena y torta de 3 pisos, entonces debes incluir este KIT de luces avanzado. </p>
