se agregan nuevas funciones y se corrigen algunos errores

--- a/index.html
+++ b/index.html
@@ -147,55 +147,12 @@
                     <img src="./assets/imagenes/ninaneon.jpg" alt="fiesta cumpleaños" class="superpuesta4">
                 </div>
                 <div class="descripcionKit">
-                    <p>Una celebración que recordarás toda la vida!!! <br>Dale magia con una máquina de humo profesional, luces de colores y un sonido que hará bailar hasta al profe!</p>
+                    <p>Ya sea si lo celebras en casa o en una sede, entonces celébralo a lo grande! <br>Tenemos diferentes opciones que se adaptan a tu presupuesto!</p>
                 </div>
                 <div class="botonKit">
                     <a href="./pages/luces.html" class="btn btn-primary">Ver KIT Recomendado</a>
                 </div>
             </div>
-		</section>
-
-		<section class="banner">
-			<h3 class="primerTextoBanner">Entrega y Retiro</h3>
-		</section>
-
-		<section class="tablaDespacho">
-			<table class="tablaValores">
-				<tr>
-					<th colspan="2" style="text-align: center;">VALORES ESTIMADOS</th>
-				</tr>
-				<tr>
-					<th>Comuna</th>
-					<th>Costo</th>
-				</tr>
-				<tr>
-					<td>San Antonio</td>
-					<td class="columnaCosto">$0</td>
-				</tr>
-				<tr>
-					<td>Santo Domingo</td>
-					<td rowspan="2" class="columnaCosto">$2.000</td>
-				</tr>
-				<tr>
-					<td>Cartagena</td>
-				</tr>
-				<tr>
-					<td>Las Cruces</td>
-					<td class="columnaCosto">$4.000</td>
-				</tr>
-				<tr>
-					<td>El Tabo</td>
-					<td rowspan="2" class="columnaCosto">$6.000</td>
-				</tr>
-				<tr>
-					<td>El Quisco</td>
-				</tr>
-				<tr>
-					<td>Algarrobo</td>
-					<td class="columnaCosto">$8.000</td>
-				</tr>
-			</table>
-			<p>Para <span>San Antonio</span> la entrega y retiro es <span>GRATIS!</span></p>
 		</section>
 
 		<section class="banner">
