--- a/pages/luces.html
+++ b/pages/luces.html
@@ -48,126 +48,208 @@
 			</div>
 		</section>
 
-		<section class="recuadroProducto">
-			<div class="tituloProducto">KIT Ultra Light</div>
-			<div class="grid">
-				<div class="imagenProducto">
-					<img src="../assets/imagenes/neon-22534.jpg" alt="Imagen de kit de luces de fiesta">
-				</div>
-				<div class="descripcionProducto">
-					<p>Si el presupuesto es ajustado o si el espacio es reducido, te recomendamos este KIT que trae lo justo y necesario, pero que aún así te dejará gratamente sorprendido.</p>
-					<p>Incluye:</p>
-					<ul>
-						<li>- 2 Cabezales Móviles</li>
-						<li>- 2 Luces de Colores</li>
-						<li>- Máquina de Humo</li>
-						<li>- Entrega y Retiro en San Antonio</li>
-					</ul>
-				</div>
-				<div class="precioProducto">
-					<div>
-						<p>Precio Oferta: <span>$23.990.-</span></p>
+		<section class="displayArea">
+			<div class="recuadroProducto">
+				<div class="tituloProducto">KIT Ultra Light</div>
+				<div class="grid">
+					<div class="imagenProducto">
+						<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+							<div class="carousel-inner">
+							  <div class="carousel-item active">
+								<img src="../assets/imagenes/dj.jpg" class="d-block w-100" alt="...">
+							  </div>
+							  <div class="carousel-item">
+								<img src="../assets/imagenes/anonuevo.jpg" class="d-block w-100" alt="...">
+							  </div>
+							  <div class="carousel-item">
+								<img src="../assets/imagenes/graduacion2.jpg" class="d-block w-100" alt="...">
+							  </div>
+							</div>
+							<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+							  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+							  <span class="visually-hidden">Previous</span>
+							</button>
+							<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+							  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+							  <span class="visually-hidden">Next</span>
+							</button>
+						  </div>	
 					</div>
-					<div class="botonProducto">
-						<button type="button" class="btn btn-dark boton1">Reservar</button>
+					<div class="descripcionProducto">
+						<p>Si el presupuesto es ajustado o si el espacio es reducido, te recomendamos este KIT que trae lo justo y necesario, pero que aún así te dejará gratamente sorprendido.</p>
+						<p>Incluye:</p>
+						<ul>
+							<li>- 2 Cabezales Móviles</li>
+							<li>- 2 Luces de Colores</li>
+							<li>- Máquina de Humo</li>
+							<li>- Entrega y Retiro en San Antonio</li>
+						</ul>
 					</div>
-				</div>
-			</div>
-		</section>
-
-		<section class="recuadroProducto">
-			<div class="tituloProducto">KIT Básico</div>
-			<div class="grid">
-				<div class="imagenProducto">
-					<img src="../assets/imagenes/neon-22534.jpg" alt="Imagen de kit básico de luces">
-				</div>
-				<div class="descripcionProducto">
-					<p>Tira la casa por la ventana con este KIT; es ideal para un espacio de unos 30 metros cuadrados.</p>
-					<p>Incluye:</p>
-					<ul>
-						<li>- Luces Láser</li>
-						<li>- Luz Derby</li>
-						<li>- Corta Imagen</li>
-						<li>- Luces Fluor</li>
-						<li>- Luces de Colores</li>
-						<li>- Máquina de Humo</li>
-						<li>- Atril (Trípode)</li>
-						<li>- Entrega y Retiro en San Antonio</li>
-					</ul>
-				</div>
-				<div class="precioProducto">
-					<div>
-						<p>Precio Oferta: <span>$29.990.-</span></p>
-					</div>
-					<div class="botonProducto">
-						<button type="button" class="btn btn-dark boton1">Reservar</button>
+					<div class="precioProducto">
+						<div>
+							<p>Precio Oferta: <span>$23.990.-</span></p>
+						</div>
+						<div class="botonProducto">
+							<button type="button" class="btn btn-dark boton1">Reservar</button>
+						</div>
 					</div>
 				</div>
 			</div>
-		</section>
-
-		<section class="recuadroProducto">
-			<div class="tituloProducto">KIT Intermedio</div>
-			<div class="grid">
-				<div class="imagenProducto">
-					<img src="../assets/imagenes/neon-22534.jpg" alt="Imagen de kit intermedio de luces de fiesta">
-				</div>
-				<div class="descripcionProducto">
-					<p>Si toca cambio de folio o fiesta de graduación, entonces éste es el KIT que necesitas! Funcionará perfecto en un espacio de hasta 80 m2.</p>
-					<p>Incluye:</p>
-					<ul>
-						<li>- Luces Láser</li>
-						<li>- Luz Derby</li>
-						<li>- Corta Imagen</li>
-						<li>- Luces Fluor</li>
-						<li>- Luces de Colores</li>
-						<li>- Máquina de Humo</li>
-						<li>- Atril (Trípode)</li>
-						<li>- 2 Cabezales Móviles</li>
-						<li>- Máquina Burbujas</li>
-						<li>- Entrega y Retiro en San Antonio</li>
-					</ul>
-				</div>
-				<div class="precioProducto">
-					<div>
-						<p>Precio Oferta: <span>$37.990.-</span></p>
+	
+			<div class="recuadroProducto">
+				<div class="tituloProducto">KIT Básico</div>
+				<div class="grid">
+					<div class="imagenProducto">
+						<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+							<div class="carousel-inner">
+							  <div class="carousel-item active">
+								<img src="../assets/imagenes/dj.jpg" class="d-block w-100" alt="...">
+							  </div>
+							  <div class="carousel-item">
+								<img src="../assets/imagenes/anonuevo.jpg" class="d-block w-100" alt="...">
+							  </div>
+							  <div class="carousel-item">
+								<img src="../assets/imagenes/graduacion2.jpg" class="d-block w-100" alt="...">
+							  </div>
+							</div>
+							<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+							  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+							  <span class="visually-hidden">Previous</span>
+							</button>
+							<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+							  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+							  <span class="visually-hidden">Next</span>
+							</button>
+						  </div>
 					</div>
-					<div class="botonProducto">
-						<button type="button" class="btn btn-dark boton1">Reservar</button>
+					<div class="descripcionProducto">
+						<p>Tira la casa por la ventana con este KIT; es ideal para un espacio de unos 30 metros cuadrados.</p>
+						<p>Incluye:</p>
+						<ul>
+							<li>- Luces Láser</li>
+							<li>- Luz Derby</li>
+							<li>- Corta Imagen</li>
+							<li>- Luces Fluor</li>
+							<li>- Luces de Colores</li>
+							<li>- Máquina de Humo</li>
+							<li>- Atril (Trípode)</li>
+							<li>- Entrega y Retiro en San Antonio</li>
+						</ul>
+					</div>
+					<div class="precioProducto">
+						<div>
+							<p>Precio Oferta: <span>$29.990.-</span></p>
+						</div>
+						<div class="botonProducto">
+							<button type="button" class="btn btn-dark boton1">Reservar</button>
+						</div>
 					</div>
 				</div>
 			</div>
-		</section>
-
-		<section class="recuadroProducto">
-			<div class="tituloProducto">KIT Avanzado</div>
-			<div class="grid">
-				<div class="imagenProducto">
-					<img src="../assets/imagenes/neon-22534.jpg" alt="Imagen de kit avanzado de luces de fiesta">
-				</div>
-				<div class="descripcionProducto">
-					<p>Si la celebración incluye cena y torta de 3 pisos, entonces debes incluir este KIT de luces avanzado. </p>
-					<p>Incluye:</p>
-					<ul>
-						<li>- Bola de Disco</li>
-						<li>- Luces Láser</li>
-						<li>- Luz Derby</li>
-						<li>- Corta Imagen</li>
-						<li>- Luces Fluor</li>
-						<li>- Luces de Colores</li>
-						<li>- 2 Máquinas de Humos</li>
-						<li>- 2 Atriles (Trípode)</li>
-						<li>- 4 Cabezales Móviles</li>
-						<li>- 2 Máquinas Burbujas</li>
-						<li>- Entrega y Retiro en San Antonio</li>
-					</ul>
-				</div>
-				<div class="precioProducto">
-					<div>
-						<p>Precio Oferta: <span>$65.990.-</span></p>
+	
+			<div class="recuadroProducto">
+				<div class="tituloProducto">KIT Intermedio</div>
+				<div class="grid">
+					<div class="imagenProducto">
+						<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+							<div class="carousel-inner">
+							  <div class="carousel-item active">
+								<img src="../assets/imagenes/dj.jpg" class="d-block w-100" alt="...">
+							  </div>
+							  <div class="carousel-item">
+								<img src="../assets/imagenes/anonuevo.jpg" class="d-block w-100" alt="...">
+							  </div>
+							  <div class="carousel-item">
+								<img src="../assets/imagenes/graduacion2.jpg" class="d-block w-100" alt="...">
+							  </div>
+							</div>
+							<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+							  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+							  <span class="visually-hidden">Previous</span>
+							</button>
+							<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+							  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+							  <span class="visually-hidden">Next</span>
+							</button>
+						  </div>
 					</div>
-					<div class="botonProducto">
-						<button type="button" class="btn btn-dark boton1">Reservar</button>
+					<div class="descripcionProducto">
+						<p>Si toca cambio de folio o fiesta de graduación, entonces éste es el KIT que necesitas! Funcionará perfecto en un espacio de hasta 80 m2.</p>
+						<p>Incluye:</p>
+						<ul>
+							<li>- Luces Láser</li>
+							<li>- Luz Derby</li>
+							<li>- Corta Imagen</li>
+							<li>- Luces Fluor</li>
+							<li>- Luces de Colores</li>
+							<li>- Máquina de Humo</li>
+							<li>- Atril (Trípode)</li>
+							<li>- 2 Cabezales Móviles</li>
+							<li>- Máquina Burbujas</li>
+							<li>- Entrega y Retiro en San Antonio</li>
+						</ul>
+					</div>
+					<div class="precioProducto">
+						<div>
+							<p>Precio Oferta: <span>$37.990.-</span></p>
+						</div>
+						<div class="botonProducto">
+							<button type="button" class="btn btn-dark boton1">Reservar</button>
+						</div>
+					</div>
+				</div>
+			</div>
+	
+			<div class="recuadroProducto">
+				<div class="tituloProducto">KIT Avanzado</div>
+				<div class="grid">
+					<div class="imagenProducto">
+						<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+							<div class="carousel-inner">
+							  <div class="carousel-item active">
+								<img src="../assets/imagenes/dj.jpg" class="d-block w-100" alt="...">
+							  </div>
+							  <div class="carousel-item">
+								<img src="../assets/imagenes/anonuevo.jpg" class="d-block w-100" alt="...">
+							  </div>
+							  <div class="carousel-item">
+								<img src="../assets/imagenes/graduacion2.jpg" class="d-block w-100" alt="...">
+							  </div>
+							</div>
+							<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+							  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+							  <span class="visually-hidden">Previous</span>
+							</button>
+							<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+							  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+							  <span class="visually-hidden">Next</span>
+							</button>
+						  </div>
+					</div>
+					<div class="descripcionProducto">
+						<p>Si la celebración incluye cena y torta de 3 pisos, entonces debes incluir este KIT de luces avanzado. </p>
+						<p>Incluye:</p>
+						<ul>
+							<li>- Bola de Disco</li>
+							<li>- Luces Láser</li>
+							<li>- Luz Derby</li>
+							<li>- Corta Imagen</li>
+							<li>- Luces Fluor</li>
+							<li>- Luces de Colores</li>
+							<li>- 2 Máquinas de Humos</li>
+							<li>- 2 Atriles (Trípode)</li>
+							<li>- 4 Cabezales Móviles</li>
+							<li>- 2 Máquinas Burbujas</li>
+							<li>- Entrega y Retiro en San Antonio</li>
+						</ul>
+					</div>
+					<div class="precioProducto">
+						<div>
+							<p>Precio Oferta: <span>$65.990.-</span></p>
+						</div>
+						<div class="botonProducto">
+							<button type="button" class="btn btn-dark boton1">Reservar</button>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -191,7 +273,7 @@
 			<h3 class="primerTextoBanner">Preguntas Frecuentes</h3>
 		</section>
 
-		<div class="boxPreguntas">
+		<section class="boxPreguntas">
 			<p class="preguntas">¿Cómo se reserva?</p>
 			<p class="respuestas">Para reservar debe indicarnos la fecha y la dirección del lugar en el que ocupará los equipos, junto con abonar el 50% del valor del KIT que haya seleccionado.</p>
 			<p class="preguntas">¿Por cuánto tiempo es el arriendo?</p>
@@ -202,7 +284,53 @@
 			<p class="respuestas">No es necesario, las luces se mueven al ritmo de la música. La máquina de humo y la de burbujas se activan con controles remoto. Al momento de la entrega se hará una capacitación sobre el uso de los equipos.</p>
 			<p class="preguntas">¿Cuánto cuesta el envío?</p>
 			<p class="respuestas">Para la comuna de San Antonio, la entrega y retiro de los equipos están incluídos dentro del valor del KIT. Para otras comunas de la provincia se aplicará un cargo extra.</p>
-		</div>
+		</section>
+
+		<section class="banner">
+			<h3 class="primerTextoBanner">Entrega y Retiro</h3>
+		</section>
+
+		<section class="tablaDespacho">
+			<table class="tablaValores">
+				<tr>
+					<th colspan="2" style="text-align: center;">VALORES ESTIMADOS</th>
+				</tr>
+				<tr>
+					<th>Comuna</th>
+					<th>Costo</th>
+				</tr>
+				<tr>
+					<td>San Antonio</td>
+					<td class="columnaCosto">$0</td>
+				</tr>
+				<tr>
+					<td>Santo Domingo</td>
+					<td rowspan="3" class="columnaCosto">$5.000</td>
+				</tr>
+				<tr>
+					<td>San Juan</td>
+				</tr>
+				<tr>
+					<td>Cartagena</td>
+				</tr>
+				<tr>
+					<td>Las Cruces</td>
+					<td class="columnaCosto">$8.000</td>
+				</tr>
+				<tr>
+					<td>El Tabo</td>
+					<td rowspan="2" class="columnaCosto">$10.000</td>
+				</tr>
+				<tr>
+					<td>El Quisco</td>
+				</tr>
+				<tr>
+					<td>Algarrobo</td>
+					<td class="columnaCosto">$15.000</td>
+				</tr>
+			</table>
+			<p>Para <span>San Antonio</span> la entrega y retiro es <span>GRATIS!</span></p>
+		</section>
 
 		<!-- Aquí va el link a whatsapp con posición fixed a la esquina inferior derecha -->
 		<section>
