agregada descripcion seo y corregida jerarquía de los H

--- a/pages/audio.html
+++ b/pages/audio.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
+	<meta name="arriendo fiestas audio amplificacion" content="arriendo de amplificacion para eventos y fiestas">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>MegaFest</title>
 	<link rel="stylesheet" href="../css/main.css">
@@ -41,15 +42,17 @@
 	<main class="mainProductos">
 		<section>
 			<div>
-				<h3 class="tituloCategoria">AMPLIFICA TU FIESTA</h3>
+				<h1 class="tituloCategoria">AMPLIFICA TU FIESTA</h1>
 			</div>
 			<div>
-				<P class="descripcionCategoria"> Haz vibrar tu celebración!!! Aprovecha nuestros precios <span>rebaratos</span> y que todo San Antonio se entere que estás de fiesta.</P>
+				<h2 class="descripcionCategoria"> Haz vibrar tu celebración!!! Aprovecha nuestros precios <span>rebaratos</span> y que todo San Antonio se entere que estás de fiesta.</h2>
 			</div>
 		</section>
 
 		<section class="recuadroProducto">
-			<div class="tituloProducto">KIT Básico</div>
+			<div class="tituloProducto">
+				<h3>KIT Básico</h3>
+			</div>
 			<div class="grid">
 				<div class="imagenProducto">
 					<img src="../assets/imagenes/mx t50.jpeg" alt="Imagen de parlante lg">
