--- a/pages/extras.html
+++ b/pages/extras.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
+	<meta name="arriendo chispas frias eventos" content="arriendo de máquinas de chispas frías para eventos y cumpleaños">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>MegaFest</title>
 	<link rel="stylesheet" href="../css/main.css">
