--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+	<meta name="arriendo eventos fiestas luces" content="arriendo de equipos para eventos y fiestas">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MegaFest</title>
     <link rel="stylesheet" href="./css/main.css">
@@ -49,24 +50,12 @@
 				<div class="carousel-inner">
 					<div class="carousel-item active">
 						<img src="./assets/imagenes/anonuevo.jpg" class="d-block w-100" alt="fiesta año nuevo">
-						<div class="carousel-caption d-none d-md-block">
-							<h5>First slide label</h5>
-							<p>Some representative placeholder content for the first slide.</p>
-						</div>
 					</div>
 					<div class="carousel-item">
 						<img src="./assets/imagenes/celebra15.jpg" class="d-block w-100 encuadreCelebracion15" alt="fiesta cumpleaños 15">
-						<div class="carousel-caption d-none d-md-block">
-							<h5>Second slide label</h5>
-							<p>Some representative placeholder content for the second slide.</p>
-						</div>
 					</div>
 					<div class="carousel-item">
 						<img src="./assets/imagenes/ninaneon.jpg" class="d-block w-100" alt="fiesta neón">
-						<div class="carousel-caption d-none d-md-block">
-							<h5>Third slide label</h5>
-							<p>Some representative placeholder content for the third slide.</p>
-						</div>
 					</div>
 				</div>
 				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
@@ -81,8 +70,8 @@
 		</section>
 
         <section class="promoProductos">
-			<div class="fiestaInolvidable">
-				<h1>QUE TU FIESTA SEA INOLVIDABLE <br>Y SIN GASTAR DE MAS</h1>
+			<div class="todoFiesta">
+				<h1>DE TODO PARA TU <span>FIESTA</span></h1>
 			</div>
 			<div class="promoProductosCards">
 				<div class="card">
