--- a/pages/fotovideo.html
+++ b/pages/fotovideo.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
+	<meta name="fotografia video evento fiesta" content="arriendo de cabina fotografica para eventos">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>MegaFest</title>
+	<title>Foto Video MegaFest</title>
 	<link rel="stylesheet" href="../css/main.css">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -41,95 +42,170 @@
 	<main class="mainProductos">
 		<section>
 			<div>
-				<h3 class="tituloCategoria">INMORTALIZA TU FIESTA</h3>
+				<h1 class="tituloCategoria">INMORTALIZA TU FIESTA</h1>
 			</div>
 			<div>
-				<P class="descripcionCategoria"> Que los recuerdos de tu gran celebración queden para siempre, adquiere fotos y videos entretenidos para ti y para tus invitados. También contamos con proyector de video.</P>
+				<h2 class="descripcionCategoria"> Que los recuerdos de tu gran celebración queden para siempre, adquiere fotos y videos entretenidos para ti y para tus invitados. También contamos con proyector de video.</h2>
 			</div>
 		</section>
 
-		<section class="recuadroProducto">
-			<div class="tituloProducto">PROYECTOR + TELÓN</div>
-			<div class="grid">
-				<div class="imagenProducto">
-					<img src="../assets/imagenes/neon-22534.jpg" alt="Imagen de proyector de video matrimonio">
+		<section class="displayArea">
+			<div class="recuadroProducto">
+				<div class="tituloProducto">
+					<h3>Cabina de Fotos</h3>
 				</div>
-				<div class="descripcionProducto">
-					<p>Que el karaoke, que las fotitos del recuerdo, que el video de reggaetón, que el partido de fútbol... Proyéctalo! que tu evento sea inolvidable!</p>
-					<p>Incluye:</p>
-					<ul>
-						<li>- Proyector Full HD</li>
-						<li>- Telón con Trípode</li>
-						<li>- Instalación</li>
-						<li>- Entrega y Retiro en San Antonio</li>
-					</ul>
-				</div>
-				<div class="precioProducto">
-					<div>
-						<p>Precio Oferta: <span>$39.990.-</span></p>
+				<div class="grid">
+					<div class="imagenProducto">
+						<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+							<div class="carousel-inner">
+							  <div class="carousel-item active">
+								<img src="../assets/imagenes/cabina.jpg" class="d-block w-100" alt="...">
+							  </div>
+							  <div class="carousel-item">
+								<img src="../assets/imagenes/anonuevo.jpg" class="d-block w-100" alt="...">
+							  </div>
+							  <div class="carousel-item">
+								<img src="../assets/imagenes/graduacion2.jpg" class="d-block w-100" alt="...">
+							  </div>
+							</div>
+							<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+							  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+							  <span class="visually-hidden">Previous</span>
+							</button>
+							<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+							  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+							  <span class="visually-hidden">Next</span>
+							</button>
+						  </div>
 					</div>
-					<div class="botonProducto">
-						<button type="button" class="btn btn-dark boton1">Reservar</button>
+					<div class="descripcionProducto">
+						<p>Fotos instantáneas con sombreros entretenidos. Tus invitados podrán llevarse fotos impresas y digitales</p>
+						<p>Incluye:</p>
+						<ul>
+							<li>- 1 hora de fotos impresas ilimitadas</li>
+							<li>- 1 ScrapBook (libro de recuerdo con fotos)</li>
+							<li>- Sombreros y cotillón divertido</li>
+							<li>- Entrega y Retiro en San Antonio</li>
+						</ul>
+					</div>
+					<div class="precioProducto">
+						<div>
+							<p>Precio Oferta: <span>$99.990.-</span></p>
+						</div>
+						<div class="botonProducto">
+							<button type="button" class="btn btn-dark boton1">Reservar</button>
+						</div>
 					</div>
 				</div>
 			</div>
-		</section>
 
-		<section class="recuadroProducto">
-			<div class="tituloProducto">PLATAFORMA 360°</div>
-			<div class="grid">
-				<div class="imagenProducto">
-					<img src="../assets/imagenes/neon-22534.jpg" alt="Imagen de plataforma 360">
+			<div class="recuadroProducto">
+				<div class="tituloProducto">
+					<h2>PROYECTOR + TELÓN</h2>
 				</div>
-				<div class="descripcionProducto">
-					<p>Siéntete como una celebridad con nuestra plataforma 360°</p>
-					<p>Incluye:</p>
-					<ul>
-						<li>- Plataforma 360°</li>
-						<li>- Alfombra Roja</li>
-						<li>- Cordón Separa Filas</li>
-						<li>- Barras de Iluminación</li>
-						<li>- Entrega y Retiro en San Antonio</li>
-					</ul>
-				</div>
-				<div class="precioProducto">
-					<div>
-						<p>Precio Oferta: <span>$99.990.-</span></p>
+				<div class="grid">
+					<div class="imagenProducto">
+						<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+							<div class="carousel-inner">
+							  <div class="carousel-item active">
+								<img src="../assets/imagenes/proyector.jpeg" class="d-block w-100" alt="...">
+							  </div>
+							  <div class="carousel-item">
+								<img src="../assets/imagenes/anonuevo.jpg" class="d-block w-100" alt="...">
+							  </div>
+							  <div class="carousel-item">
+								<img src="../assets/imagenes/graduacion2.jpg" class="d-block w-100" alt="...">
+							  </div>
+							</div>
+							<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+							  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+							  <span class="visually-hidden">Previous</span>
+							</button>
+							<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+							  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+							  <span class="visually-hidden">Next</span>
+							</button>
+						  </div>
 					</div>
-					<div class="botonProducto">
-						<button type="button" class="btn btn-dark boton1">Reservar</button>
+					<div class="descripcionProducto">
+						<p>Que el karaoke, que las fotitos del recuerdo, que el video de reggaetón, que el partido de fútbol... Proyéctalo! que tu evento sea inolvidable!</p>
+						<p>Incluye:</p>
+						<ul>
+							<li>- Proyector Full HD</li>
+							<li>- Telón con Trípode</li>
+							<li>- Instalación</li>
+							<li>- Entrega y Retiro en San Antonio</li>
+						</ul>
+					</div>
+					<div class="precioProducto">
+						<div>
+							<p>Precio Oferta: <span>$39.990.-</span></p>
+						</div>
+						<div class="botonProducto">
+							<button type="button" class="btn btn-dark boton1">Reservar</button>
+						</div>
+					</div>
+				</div>
+			</div>
+	
+			<div class="recuadroProducto">
+				<div class="tituloProducto">
+					<h3>PLATAFORMA 360°</h3>
+				</div>
+				<div class="grid">
+					<div class="imagenProducto">
+						<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+							<div class="carousel-inner">
+							  <div class="carousel-item active">
+								<img src="../assets/imagenes/360 (1).png" class="d-block w-100" alt="...">
+							  </div>
+							  <div class="carousel-item">
+								<img src="../assets/imagenes/anonuevo.jpg" class="d-block w-100" alt="...">
+							  </div>
+							  <div class="carousel-item">
+								<img src="../assets/imagenes/graduacion2.jpg" class="d-block w-100" alt="...">
+							  </div>
+							</div>
+							<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+							  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+							  <span class="visually-hidden">Previous</span>
+							</button>
+							<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+							  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+							  <span class="visually-hidden">Next</span>
+							</button>
+						  </div>
+					</div>
+					<div class="descripcionProducto">
+						<p>Siéntete como una celebridad con nuestra plataforma 360°</p>
+						<p>Incluye:</p>
+						<ul>
+							<li>- Plataforma 360°</li>
+							<li>- Alfombra Roja</li>
+							<li>- Cordón Separa Filas</li>
+							<li>- Barras de Iluminación</li>
+							<li>- Entrega y Retiro en San Antonio</li>
+						</ul>
+					</div>
+					<div class="precioProducto">
+						<div>
+							<p>Precio Oferta: <span>$99.990.-</span></p>
+						</div>
+						<div class="botonProducto">
+							<button type="button" class="btn btn-dark boton1">Reservar</button>
+						</div>
+					</div>
+					<div class="precioProducto">
+						<div>
+							<p>Precio Oferta: <span>$29.990.-</span></p>
+						</div>
+						<div class="botonProducto">
+							<button type="button" class="btn btn-dark boton1">Reservar</button>
+						</div>
 					</div>
 				</div>
 			</div>
 		</section>
-
-		<section class="recuadroProducto">
-			<div class="tituloProducto">Cabina de Fotos</div>
-			<div class="grid">
-				<div class="imagenProducto">
-					<img src="../assets/imagenes/cabina.jpg" alt="Imagen de cabina de fotos">
-				</div>
-				<div class="descripcionProducto">
-					<p>Fotos instantáneas con sombreros entretenidos. Tus invitados podrán llevarse fotos impresas y digitales</p>
-					<p>Incluye:</p>
-					<ul>
-						<li>- 1 hora de fotos impresas ilimitadas</li>
-						<li>- 1 ScrapBook (libro de recuerdo con fotos)</li>
-						<li>- Sombreros y cotillón divertido</li>
-						<li>- Entrega y Retiro en San Antonio</li>
-					</ul>
-				</div>
-				<div class="precioProducto">
-					<div>
-						<p>Precio Oferta: <span>$99.990.-</span></p>
-					</div>
-					<div class="botonProducto">
-						<button type="button" class="btn btn-dark boton1">Reservar</button>
-					</div>
-				</div>
-			</div>
-		</section>
-		
 
 		<section class="banner">
 			<h3 class="primerTextoBanner">OBTÉN UN 20% DE DESCUENTO</h3>
@@ -146,19 +222,67 @@
 		</section>
 
 		<section class="banner">
-			<h3 class="primerTextoBanner">Preguntas Frecuentes</h3>
+			<h4 class="primerTextoBanner">Preguntas Frecuentes</h4>
 		</section>
 
-		<div class="boxPreguntas">
+		<section class="boxPreguntas">
 			<p class="preguntas">¿Cómo se reserva?</p>
 			<p class="respuestas">Para reservar debe indicarnos la fecha y la dirección del lugar en el que ocupará los equipos, junto con abonar el 50% del valor del KIT que haya seleccionado.</p>
 			<p class="preguntas">¿Por cuánto tiempo es el arriendo?</p>
 			<p class="respuestas">El arriendo es por evento, normalmente se entregan los equipos el mismo día del evento y se retiran al día siguiente. Si el valor de su arriendo supera los $50.000, entonces podemos retirar los equipos durante la madrugada si es requerido.</p>
 			<p class="preguntas">¿Incluye instalación?</p>
-			<p class="respuestas">Sí, al entregar se dejan los equipos conectados y listos para su uso. Se hará además, una capacitación sencilla sobre su uso.</p>
+			<p class="respuestas">Los KITs Ultra Light, Básico e Intermedio no requieren instalación, son llegar y enchufar. El KIT avanzado si requiere instalación y está considerado en el precio.</p>
+			<p class="preguntas">¿Hay que controlar las luces?</p>
+			<p class="respuestas">No es necesario, las luces se mueven al ritmo de la música. La máquina de humo y la de burbujas se activan con controles remoto. Al momento de la entrega se hará una capacitación sobre el uso de los equipos.</p>
 			<p class="preguntas">¿Cuánto cuesta el envío?</p>
-			<p class="respuestas">Los KITs Intermedio, Avanzado y PRO tienen incluido el costo de entrega y retiro en la comuna de San Antonio. El KIT básico se debe arrendar en conjunto con un KIT de Luces para que su despacho no tenga costo. Las entregas en otras comunas de la provincia tienen un cargo extra.</p>
-		</div>
+			<p class="respuestas">Para la comuna de San Antonio, la entrega y retiro de los equipos están incluídos dentro del valor del KIT. Para otras comunas de la provincia se aplicará un cargo extra.</p>
+		</section>
+
+		<section class="banner">
+			<h3 class="primerTextoBanner">Entrega y Retiro</h3>
+		</section>
+
+		<section class="tablaDespacho">
+			<table class="tablaValores">
+				<tr>
+					<th colspan="2" style="text-align: center;">VALORES ESTIMADOS</th>
+				</tr>
+				<tr>
+					<th>Comuna</th>
+					<th>Costo</th>
+				</tr>
+				<tr>
+					<td>San Antonio</td>
+					<td class="columnaCosto">$0</td>
+				</tr>
+				<tr>
+					<td>Santo Domingo</td>
+					<td rowspan="3" class="columnaCosto">$5.000</td>
+				</tr>
+				<tr>
+					<td>San Juan</td>
+				</tr>
+				<tr>
+					<td>Cartagena</td>
+				</tr>
+				<tr>
+					<td>Las Cruces</td>
+					<td class="columnaCosto">$8.000</td>
+				</tr>
+				<tr>
+					<td>El Tabo</td>
+					<td rowspan="2" class="columnaCosto">$10.000</td>
+				</tr>
+				<tr>
+					<td>El Quisco</td>
+				</tr>
+				<tr>
+					<td>Algarrobo</td>
+					<td class="columnaCosto">$15.000</td>
+				</tr>
+			</table>
+			<p>Para <span>San Antonio</span> la entrega y retiro es <span>GRATIS!</span></p>
+		</section>
 
 		<!-- Aquí va el link a whatsapp con posición fixed a la esquina inferior derecha -->
 		<section>
