--- a/pages/luces.html
+++ b/pages/luces.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
+	<meta name="arriendo luces iluminacion fiestas eventos" content="arriendo de luces para fiestas y eventos">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>MegaFest</title>
+	<title>Iluminacion MegaFest</title>
 	<link rel="stylesheet" href="../css/main.css">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -41,16 +42,18 @@
 	<main class="mainProductos">
 		<section>
 			<div>
-				<h3 class="tituloCategoria">NUESTRA ILUMINACIÓN</h3>
+				<h1 class="tituloCategoria">NUESTRA ILUMINACIÓN</h1>
 			</div>
 			<div>
-				<P class="descripcionCategoria"> En MegaFest tenemos las luces perfectas para tu celebración, con precios <span>rebaratos</span> y con entrega y retiro incluidos dentro de San Antonio.</P>
+				<h2 class="descripcionCategoria"> En MegaFest tenemos las luces perfectas para tu celebración, con precios <span>rebaratos</span> y con entrega y retiro incluidos dentro de San Antonio.</h2>
 			</div>
 		</section>
 
 		<section class="displayArea">
 			<div class="recuadroProducto">
-				<div class="tituloProducto">KIT Ultra Light</div>
+				<div class="tituloProducto">
+					<h3>KIT Ultra Light</h3>
+				</div>
 				<div class="grid">
 					<div class="imagenProducto">
 						<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
@@ -97,7 +100,9 @@
 			</div>
 	
 			<div class="recuadroProducto">
-				<div class="tituloProducto">KIT Básico</div>
+				<div class="tituloProducto">
+					<h3>KIT Básico</h3>
+				</div>
 				<div class="grid">
 					<div class="imagenProducto">
 						<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
@@ -148,7 +153,9 @@
 			</div>
 	
 			<div class="recuadroProducto">
-				<div class="tituloProducto">KIT Intermedio</div>
+				<div class="tituloProducto">
+					<h3>KIT Intermedio</h3>
+				</div>
 				<div class="grid">
 					<div class="imagenProducto">
 						<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
@@ -201,7 +208,9 @@
 			</div>
 	
 			<div class="recuadroProducto">
-				<div class="tituloProducto">KIT Avanzado</div>
+				<div class="tituloProducto">
+					<h3>KIT Avanzado</h3>
+				</div>
 				<div class="grid">
 					<div class="imagenProducto">
 						<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
@@ -270,7 +279,7 @@
 		</section>
 
 		<section class="banner">
-			<h3 class="primerTextoBanner">Preguntas Frecuentes</h3>
+			<h4 class="primerTextoBanner">Preguntas Frecuentes</h4>
 		</section>
 
 		<section class="boxPreguntas">
