añado bootstrap a las imagenes de todos los productos

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     <img src="./assets/imagenes/ninaneon.jpg" alt="imagen de graduación" class="superpuesta2">
                 </div>
                 <div class="descripcionKit">
-                    <p>Una celebración que recordarás toda la vida!!! <br>Dale magia con una máquina de humo profesional, luces de colores y un sonido que hará bailar hasta al profe!</p>
+                    <h4>Una celebración que recordarás toda la vida!!! <br>Dale magia con una máquina de humo profesional, luces de colores y un sonido que hará bailar hasta al profe!</h4>
                 </div>
                 <div class="botonKit">
                     <a href="./pages/fotovideo.html" class="btn btn-primary">Ver KIT Recomendado</a>
@@ -136,7 +136,7 @@
                     <img src="./assets/imagenes/ninaneon.jpg" alt="fiesta cumpleaños" class="superpuesta4">
                 </div>
                 <div class="descripcionKit">
-                    <p>Ya sea si lo celebras en casa o en una sede, entonces celébralo a lo grande! <br>Tenemos diferentes opciones que se adaptan a tu presupuesto!</p>
+                    <h4>Ya sea si lo celebras en casa o en una sede, entonces celébralo a lo grande! <br>Tenemos diferentes opciones que se adaptan a tu presupuesto!</h4>
                 </div>
                 <div class="botonKit">
                     <a href="./pages/luces.html" class="btn btn-primary">Ver KIT Recomendado</a>
