--- a/pages/extras.html
+++ b/pages/extras.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="arriendo chispas frias eventos" content="arriendo de máquinas de chispas frías para eventos y cumpleaños">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>MegaFest</title>
+	<title>efectos MegaFest</title>
 	<link rel="stylesheet" href="../css/main.css">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -42,35 +42,59 @@
 	<main class="mainProductos">
 		<section>
 			<div>
-				<h3 class="tituloCategoria">MAGIA PARA TU EVENTO</h3>
+				<h1 class="tituloCategoria">MAGIA PARA TU EVENTO</h1>
 			</div>
 			<div>
-				<P class="descripcionCategoria"> Convierte un evento común, en uno inolvidable! Añade magia a tu evento.</P>
+				<h2 class="descripcionCategoria">Convierte un evento común, en uno inolvidable! Añade magia a tu evento.</h2>
 			</div>
 		</section>
 
-		<section class="recuadroProducto">
-			<div class="tituloProducto">Chispas Frías</div>
-			<div class="grid">
-				<div class="imagenProducto">
-					<img src="../assets/imagenes/neon-22534.jpg" alt="Imagen de máquinas de chispas frías">
+		<section class="displayArea">
+			<div class="recuadroProducto">
+				<div class="tituloProducto">
+					<h3>Chispas Frías</h3>
 				</div>
-				<div class="descripcionProducto">
-					<p>Las mejores fotos son con efectos de chispas frías, tus invitados quedarán boquiabiertos</p>
-					<p>Incluye:</p>
-					<ul>
-						<li>- 2 Máquinas de Chispas Frías</li>
-						<li>- Arriendo de 5 horas</li>
-						<li>- Capacitación de uso</li>
-						<li>- Entrega y Retiro en San Antonio</li>
-					</ul>
-				</div>
-				<div class="precioProducto">
-					<div>
-						<p>Precio Oferta: <span>$99.990.-</span></p>
+				<div class="grid">
+					<div class="imagenProducto">
+						<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+							<div class="carousel-inner">
+							  <div class="carousel-item active">
+								<img src="../assets/imagenes/dj.jpg" class="d-block w-100" alt="...">
+							  </div>
+							  <div class="carousel-item">
+								<img src="../assets/imagenes/anonuevo.jpg" class="d-block w-100" alt="...">
+							  </div>
+							  <div class="carousel-item">
+								<img src="../assets/imagenes/graduacion2.jpg" class="d-block w-100" alt="...">
+							  </div>
+							</div>
+							<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+							  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+							  <span class="visually-hidden">Previous</span>
+							</button>
+							<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+							  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+							  <span class="visually-hidden">Next</span>
+							</button>
+						  </div>	
 					</div>
-					<div class="botonProducto">
-						<button type="button" class="btn btn-dark boton1">Reservar</button>
+					<div class="descripcionProducto">
+						<p>Las mejores fotos son con efectos de chispas frías, tus invitados quedarán boquiabiertos</p>
+						<p>Incluye:</p>
+						<ul>
+							<li>- 2 Máquinas de Chispas Frías</li>
+							<li>- Arriendo de 5 horas</li>
+							<li>- Capacitación de uso</li>
+							<li>- Entrega y Retiro en San Antonio</li>
+						</ul>
+					</div>
+					<div class="precioProducto">
+						<div>
+							<p>Precio Oferta: <span>$99.990.-</span></p>
+						</div>
+						<div class="botonProducto">
+							<button type="button" class="btn btn-dark boton1">Reservar</button>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -91,10 +115,10 @@
 		</section>
 
 		<section class="banner">
-			<h3 class="primerTextoBanner">Preguntas Frecuentes</h3>
+			<h4 class="primerTextoBanner">Preguntas Frecuentes</h4>
 		</section>
 
-		<div class="boxPreguntas">
+		<section class="boxPreguntas">
 			<p class="preguntas">¿Cómo se reserva?</p>
 			<p class="respuestas">Para reservar debe indicarnos la fecha y la dirección del lugar en el que ocupará los equipos, junto con abonar el 50% del valor del KIT que haya seleccionado.</p>
 			<p class="preguntas">¿Por cuánto tiempo es el arriendo?</p>
@@ -103,7 +127,53 @@
 			<p class="respuestas">Sí, al entregar se dejan los equipos conectados y listos para su uso. Se hará además, una capacitación sencilla sobre su uso.</p>
 			<p class="preguntas">¿Cuánto cuesta el envío?</p>
 			<p class="respuestas">Para la comuna de San Antonio, la entrega y retiro de los equipos están incluídos dentro del valor del KIT. Para otras comunas de la provincia se aplicará un cargo extra.</p>
-		</div>
+		</section>
+
+		<section class="banner">
+			<h3 class="primerTextoBanner">Entrega y Retiro</h3>
+		</section>
+
+		<section class="tablaDespacho">
+			<table class="tablaValores">
+				<tr>
+					<th colspan="2" style="text-align: center;">VALORES ESTIMADOS</th>
+				</tr>
+				<tr>
+					<th>Comuna</th>
+					<th>Costo</th>
+				</tr>
+				<tr>
+					<td>San Antonio</td>
+					<td class="columnaCosto">$0</td>
+				</tr>
+				<tr>
+					<td>Santo Domingo</td>
+					<td rowspan="3" class="columnaCosto">$5.000</td>
+				</tr>
+				<tr>
+					<td>San Juan</td>
+				</tr>
+				<tr>
+					<td>Cartagena</td>
+				</tr>
+				<tr>
+					<td>Las Cruces</td>
+					<td class="columnaCosto">$8.000</td>
+				</tr>
+				<tr>
+					<td>El Tabo</td>
+					<td rowspan="2" class="columnaCosto">$10.000</td>
+				</tr>
+				<tr>
+					<td>El Quisco</td>
+				</tr>
+				<tr>
+					<td>Algarrobo</td>
+					<td class="columnaCosto">$15.000</td>
+				</tr>
+			</table>
+			<p>Para <span>San Antonio</span> la entrega y retiro es <span>GRATIS!</span></p>
+		</section>
 
 		<!-- Aquí va el link a whatsapp con posición fixed a la esquina inferior derecha -->
 		<section>
