--- a/pages/luces.html
+++ b/pages/luces.html
@@ -59,7 +59,7 @@
 						<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
 							<div class="carousel-inner">
 							  <div class="carousel-item active">
-								<img src="../assets/imagenes/dj.jpg" class="d-block w-100" alt="...">
+								<img src="../assets/imagenes/luces.jpg" class="d-block w-100" alt="...">
 							  </div>
 							  <div class="carousel-item">
 								<img src="../assets/imagenes/anonuevo.jpg" class="d-block w-100" alt="...">
