--- a/pages/audio.html
+++ b/pages/audio.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="arriendo fiestas audio amplificacion" content="arriendo de amplificacion para eventos y fiestas">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>MegaFest</title>
+	<title>Audio MegaFest</title>
 	<link rel="stylesheet" href="../css/main.css">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -45,124 +45,211 @@
 				<h1 class="tituloCategoria">AMPLIFICA TU FIESTA</h1>
 			</div>
 			<div>
-				<h2 class="descripcionCategoria"> Haz vibrar tu celebración!!! Aprovecha nuestros precios <span>rebaratos</span> y que todo San Antonio se entere que estás de fiesta.</h2>
+				<h2 class="descripcionCategoria">Haz vibrar tu celebración!!! Aprovecha nuestros precios <span>rebaratos</span> y que todo San Antonio se entere que estás de fiesta.</h2>
 			</div>
 		</section>
 
-		<section class="recuadroProducto">
-			<div class="tituloProducto">
-				<h3>KIT Básico</h3>
-			</div>
-			<div class="grid">
-				<div class="imagenProducto">
-					<img src="../assets/imagenes/mx t50.jpeg" alt="Imagen de parlante lg">
+		<section class="displayArea">
+			<div class="recuadroProducto">
+				<div class="tituloProducto">
+					<h3>KIT Básico</h3>
 				</div>
-				<div class="descripcionProducto">
-					<p>No subestimes a éste parlante, es capaz de prender el carrete a medio volumen, además tiene un bonito diseño, especial para espacios pequeños como una sala de clases. Incluye 1 micrófono inalámbrico. Es marca LG y tiene una potencia de 200 RMS.</p>
-					<p>Incluye:</p>
-					<ul>
-						<li>- 1 Parlante Activo</li>
-						<li>- 1 Micrófono Alámbrico</li>
-						<li>- Entrega y Retiro en San Antonio</li>
-					</ul>
-				</div>
-				<div class="precioProducto">
-					<div>
-						<p>Precio Oferta: <span>$19.990.-</span></p>
+				<div class="grid">
+					<div class="imagenProducto">
+						<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+							<div class="carousel-inner">
+							  <div class="carousel-item active">
+								<img src="../assets/imagenes/mx t50.jpeg" class="d-block w-100" alt="...">
+							  </div>
+							  <div class="carousel-item">
+								<img src="../assets/imagenes/anonuevo.jpg" class="d-block w-100" alt="...">
+							  </div>
+							  <div class="carousel-item">
+								<img src="../assets/imagenes/graduacion2.jpg" class="d-block w-100" alt="...">
+							  </div>
+							</div>
+							<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+							  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+							  <span class="visually-hidden">Previous</span>
+							</button>
+							<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+							  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+							  <span class="visually-hidden">Next</span>
+							</button>
+						  </div>	
 					</div>
-					<div class="botonProducto">
-						<button type="button" class="btn btn-dark boton1">Reservar</button>
+					<div class="descripcionProducto">
+						<p>No subestimes a éste parlante, es capaz de prender el carrete a medio volumen, además tiene un bonito diseño, especial para espacios pequeños como una sala de clases. Incluye 1 micrófono inalámbrico. Es marca LG y tiene una potencia de 200 RMS.</p>
+						<p>Incluye:</p>
+						<ul>
+							<li>- 1 Parlante Activo</li>
+							<li>- 1 Micrófono Alámbrico</li>
+							<li>- Entrega y Retiro en San Antonio</li>
+						</ul>
+					</div>
+					<div class="precioProducto">
+						<div>
+							<p>Precio Oferta: <span>$19.990.-</span></p>
+						</div>
+						<div class="botonProducto">
+							<button type="button" class="btn btn-dark boton1">Reservar</button>
+						</div>
+					</div>
+				</div>
+			</div>
+	
+			<div class="recuadroProducto">
+				<div class="tituloProducto">
+					<h3>KIT Intermedio</h3>
+				</div>
+				<div class="grid">
+					<div class="imagenProducto">
+						<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+							<div class="carousel-inner">
+							  <div class="carousel-item active">
+								<img src="../assets/imagenes/dj.jpg" class="d-block w-100" alt="...">
+							  </div>
+							  <div class="carousel-item">
+								<img src="../assets/imagenes/anonuevo.jpg" class="d-block w-100" alt="...">
+							  </div>
+							  <div class="carousel-item">
+								<img src="../assets/imagenes/graduacion2.jpg" class="d-block w-100" alt="...">
+							  </div>
+							</div>
+							<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+							  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+							  <span class="visually-hidden">Previous</span>
+							</button>
+							<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+							  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+							  <span class="visually-hidden">Next</span>
+							</button>
+						  </div>
+					</div>
+					<div class="descripcionProducto">
+						<p>Con este KIT llegan los de seguridad ciudadana, quedas advertido. Los amplificadores son marca XXXXXXX de 300 RMS cada uno.</p>
+						<p>Incluye:</p>
+						<ul>
+							<li>- 1 Amplificador Activo</li>
+							<li>- 1 Amplificador Pasivo</li>
+							<li>- 2 Atriles (Trípodes)</li>
+							<li>- 2 Micrófonos Inalámbricos.</li>
+							<li>- Entrega y Retiro en San Antonio</li>
+						</ul>
+					</div>
+					<div class="precioProducto">
+						<div>
+							<p>Precio Oferta: <span>$39.990.-</span></p>
+						</div>
+						<div class="botonProducto">
+							<button type="button" class="btn btn-dark boton1">Reservar</button>
+						</div>
+					</div>
+				</div>
+			</div>
+	
+			<div class="recuadroProducto">
+				<div class="tituloProducto">
+					<h3>KIT Avanzado</h3>
+				</div>
+				<div class="grid">
+					<div class="imagenProducto">
+						<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+							<div class="carousel-inner">
+							  <div class="carousel-item active">
+								<img src="../assets/imagenes/dj.jpg" class="d-block w-100" alt="...">
+							  </div>
+							  <div class="carousel-item">
+								<img src="../assets/imagenes/anonuevo.jpg" class="d-block w-100" alt="...">
+							  </div>
+							  <div class="carousel-item">
+								<img src="../assets/imagenes/graduacion2.jpg" class="d-block w-100" alt="...">
+							  </div>
+							</div>
+							<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+							  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+							  <span class="visually-hidden">Previous</span>
+							</button>
+							<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+							  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+							  <span class="visually-hidden">Next</span>
+							</button>
+						  </div>
+					</div>
+					<div class="descripcionProducto">
+						<p>Si buscas un sonido de alta fidelidad, reserva este KIT; tendrás que echar a tus invitados porque nadie querrá irse. La amplificación es marca XXXXXX de 400 RMS cada parlante.</p>
+						<p>Incluye:</p>
+						<ul>
+							<li>- 1 Amplificador Activo</li>
+							<li>- 1 Amplificador Pasivo</li>
+							<li>- 2 Atriles (Trípodes)</li>
+							<li>- 4 Micrófonos Inalámbricos.</li>
+							<li>- Entrega y Retiro en San Antonio</li>
+						</ul>
+					</div>
+					<div class="precioProducto">
+						<div>
+							<p>Precio Oferta: <span>$69.990.-</span></p>
+						</div>
+						<div class="botonProducto">
+							<button type="button" class="btn btn-dark boton1">Reservar</button>
+						</div>
+					</div>
+				</div>
+			</div>
+	
+			<div class="recuadroProducto">
+				<div class="tituloProducto">
+					<h3>SERVICIO DE DJ + AUDIO PRO</h3>
+				</div>
+				<div class="grid">
+					<div class="imagenProducto">
+						<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+							<div class="carousel-inner">
+							  <div class="carousel-item active">
+								<img src="../assets/imagenes/dj.jpg" class="d-block w-100" alt="...">
+							  </div>
+							  <div class="carousel-item">
+								<img src="../assets/imagenes/anonuevo.jpg" class="d-block w-100" alt="...">
+							  </div>
+							  <div class="carousel-item">
+								<img src="../assets/imagenes/graduacion2.jpg" class="d-block w-100" alt="...">
+							  </div>
+							</div>
+							<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+							  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+							  <span class="visually-hidden">Previous</span>
+							</button>
+							<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+							  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+							  <span class="visually-hidden">Next</span>
+							</button>
+						  </div>
+					</div>
+					<div class="descripcionProducto">
+						<p>Si la cosa va en serio, entonces necesitas un DJ y un audio capaz de dejar a tus invitados peinados para atrás! La amplificación es marca XXXXXX de 400 RMS cada parlante.</p>
+						<p>Incluye:</p>
+						<ul>
+							<li>- 1 Amplificador Activo</li>
+							<li>- 1 Amplificador Pasivo</li>
+							<li>- 2 Atriles (Trípodes)</li>
+							<li>- 4 Micrófonos Inalámbricos.</li>
+							<li>- 1 Mesa de DJ</li>
+							<li>- 6 horas de servicios de DJ</li>
+							<li>- Entrega y Retiro en San Antonio</li>
+						</ul>
+					</div>
+					<div class="precioProducto">
+						<div>
+							<p>Precio Oferta: <span>$119.990.-</span></p>
+						</div>
+						<div class="botonProducto">
+							<button type="button" class="btn btn-dark boton1">Reservar</button>
+						</div>
 					</div>
 				</div>
 			</div>
 		</section>
-
-		<section class="recuadroProducto">
-			<div class="tituloProducto">KIT Intermedio</div>
-			<div class="grid">
-				<div class="imagenProducto">
-					<img src="../assets/imagenes/neon-22534.jpg" alt="Imagen de kit intermedio de audio">
-				</div>
-				<div class="descripcionProducto">
-					<p>Con este KIT llegan los de seguridad ciudadana, quedas advertido. Los amplificadores son marca XXXXXXX de 300 RMS cada uno.</p>
-					<p>Incluye:</p>
-					<ul>
-						<li>- 1 Amplificador Activo</li>
-						<li>- 1 Amplificador Pasivo</li>
-						<li>- 2 Atriles (Trípodes)</li>
-						<li>- 2 Micrófonos Inalámbricos.</li>
-						<li>- Entrega y Retiro en San Antonio</li>
-					</ul>
-				</div>
-				<div class="precioProducto">
-					<div>
-						<p>Precio Oferta: <span>$39.990.-</span></p>
-					</div>
-					<div class="botonProducto">
-						<button type="button" class="btn btn-dark boton1">Reservar</button>
-					</div>
-				</div>
-			</div>
-		</section>
-
-		<section class="recuadroProducto">
-			<div class="tituloProducto">KIT Avanzado</div>
-			<div class="grid">
-				<div class="imagenProducto">
-					<img src="../assets/imagenes/neon-22534.jpg" alt="Imagen de kit avanzado de audio">
-				</div>
-				<div class="descripcionProducto">
-					<p>Si buscas un sonido de alta fidelidad, reserva este KIT; tendrás que echar a tus invitados porque nadie querrá irse. La amplificación es marca XXXXXX de 400 RMS cada parlante.</p>
-					<p>Incluye:</p>
-					<ul>
-						<li>- 1 Amplificador Activo</li>
-						<li>- 1 Amplificador Pasivo</li>
-						<li>- 2 Atriles (Trípodes)</li>
-						<li>- 4 Micrófonos Inalámbricos.</li>
-						<li>- Entrega y Retiro en San Antonio</li>
-					</ul>
-				</div>
-				<div class="precioProducto">
-					<div>
-						<p>Precio Oferta: <span>$69.990.-</span></p>
-					</div>
-					<div class="botonProducto">
-						<button type="button" class="btn btn-dark boton1">Reservar</button>
-					</div>
-				</div>
-			</div>
-		</section>
-
-		<section class="recuadroProducto">
-			<div class="tituloProducto">SERVICIO DE DJ + AUDIO PRO</div>
-			<div class="grid">
-				<div class="imagenProducto">
-					<img src="../assets/imagenes/dj.jpg" alt="Imagen de dj">
-				</div>
-				<div class="descripcionProducto">
-					<p>Si la cosa va en serio, entonces necesitas un DJ y un audio capaz de dejar a tus invitados peinados para atrás! La amplificación es marca XXXXXX de 400 RMS cada parlante.</p>
-					<p>Incluye:</p>
-					<ul>
-						<li>- 1 Amplificador Activo</li>
-						<li>- 1 Amplificador Pasivo</li>
-						<li>- 2 Atriles (Trípodes)</li>
-						<li>- 4 Micrófonos Inalámbricos.</li>
-						<li>- 1 Mesa de DJ</li>
-						<li>- 6 horas de servicios de DJ</li>
-						<li>- Entrega y Retiro en San Antonio</li>
-					</ul>
-				</div>
-				<div class="precioProducto">
-					<div>
-						<p>Precio Oferta: <span>$119.990.-</span></p>
-					</div>
-					<div class="botonProducto">
-						<button type="button" class="btn btn-dark boton1">Reservar</button>
-					</div>
-				</div>
-			</div>
-		</section>
-
 
 		<section class="banner">
 			<h3 class="primerTextoBanner">OBTÉN UN 20% DE DESCUENTO</h3>
@@ -179,10 +266,10 @@
 		</section>
 
 		<section class="banner">
-			<h3 class="primerTextoBanner">Preguntas Frecuentes</h3>
+			<h4 class="primerTextoBanner">Preguntas Frecuentes</h4>
 		</section>
 
-		<div class="boxPreguntas">
+		<section class="boxPreguntas">
 			<p class="preguntas">¿Cómo se reserva?</p>
 			<p class="respuestas">Para reservar debe indicarnos la fecha y la dirección del lugar en el que ocupará los equipos, junto con abonar el 50% del valor del KIT que haya seleccionado.</p>
 			<p class="preguntas">¿Por cuánto tiempo es el arriendo?</p>
@@ -191,7 +278,53 @@
 			<p class="respuestas">Sí, al entregar se dejan los equipos conectados y listos para su uso. Se hará además, una capacitación sencilla sobre su uso.</p>
 			<p class="preguntas">¿Cuánto cuesta el envío?</p>
 			<p class="respuestas">Para la comuna de San Antonio, la entrega y retiro de los equipos están incluídos dentro del valor del KIT. Para otras comunas de la provincia se aplicará un cargo extra.</p>
-		</div>
+		</section>
+
+		<section class="banner">
+			<h3 class="primerTextoBanner">Entrega y Retiro</h3>
+		</section>
+
+		<section class="tablaDespacho">
+			<table class="tablaValores">
+				<tr>
+					<th colspan="2" style="text-align: center;">VALORES ESTIMADOS</th>
+				</tr>
+				<tr>
+					<th>Comuna</th>
+					<th>Costo</th>
+				</tr>
+				<tr>
+					<td>San Antonio</td>
+					<td class="columnaCosto">$0</td>
+				</tr>
+				<tr>
+					<td>Santo Domingo</td>
+					<td rowspan="3" class="columnaCosto">$5.000</td>
+				</tr>
+				<tr>
+					<td>San Juan</td>
+				</tr>
+				<tr>
+					<td>Cartagena</td>
+				</tr>
+				<tr>
+					<td>Las Cruces</td>
+					<td class="columnaCosto">$8.000</td>
+				</tr>
+				<tr>
+					<td>El Tabo</td>
+					<td rowspan="2" class="columnaCosto">$10.000</td>
+				</tr>
+				<tr>
+					<td>El Quisco</td>
+				</tr>
+				<tr>
+					<td>Algarrobo</td>
+					<td class="columnaCosto">$15.000</td>
+				</tr>
+			</table>
+			<p>Para <span>San Antonio</span> la entrega y retiro es <span>GRATIS!</span></p>
+		</section>
 
 		<!-- Aquí va el link a whatsapp con posición fixed a la esquina inferior derecha -->
 		<section>
