--- a/pages/fotovideo.html
+++ b/pages/fotovideo.html
@@ -111,7 +111,7 @@
 								<img src="../assets/imagenes/proyector.jpeg" class="d-block w-100" alt="...">
 							  </div>
 							  <div class="carousel-item">
-								<img src="../assets/imagenes/anonuevo.jpg" class="d-block w-100" alt="...">
+								<img src="../assets/imagenes/Multimedia Projector logo (1).png" class="d-block w-100" alt="...">
 							  </div>
 							  <div class="carousel-item">
 								<img src="../assets/imagenes/graduacion2.jpg" class="d-block w-100" alt="...">
@@ -195,14 +195,6 @@
 							<button type="button" class="btn btn-dark boton1">Reservar</button>
 						</div>
 					</div>
-					<div class="precioProducto">
-						<div>
-							<p>Precio Oferta: <span>$29.990.-</span></p>
-						</div>
-						<div class="botonProducto">
-							<button type="button" class="btn btn-dark boton1">Reservar</button>
-						</div>
-					</div>
 				</div>
 			</div>
 		</section>
@@ -231,9 +223,7 @@
 			<p class="preguntas">¿Por cuánto tiempo es el arriendo?</p>
 			<p class="respuestas">El arriendo es por evento, normalmente se entregan los equipos el mismo día del evento y se retiran al día siguiente. Si el valor de su arriendo supera los $50.000, entonces podemos retirar los equipos durante la madrugada si es requerido.</p>
 			<p class="preguntas">¿Incluye instalación?</p>
-			<p class="respuestas">Los KITs Ultra Light, Básico e Intermedio no requieren instalación, son llegar y enchufar. El KIT avanzado si requiere instalación y está considerado en el precio.</p>
-			<p class="preguntas">¿Hay que controlar las luces?</p>
-			<p class="respuestas">No es necesario, las luces se mueven al ritmo de la música. La máquina de humo y la de burbujas se activan con controles remoto. Al momento de la entrega se hará una capacitación sobre el uso de los equipos.</p>
+			<p class="respuestas">Sí, al entregar se dejan los equipos conectados y listos para su uso. Se hará además, una capacitación sencilla sobre su uso.</p>
 			<p class="preguntas">¿Cuánto cuesta el envío?</p>
 			<p class="respuestas">Para la comuna de San Antonio, la entrega y retiro de los equipos están incluídos dentro del valor del KIT. Para otras comunas de la provincia se aplicará un cargo extra.</p>
 		</section>
